Stylesheet/emote/tag updates 2015-01-20

--- a/source-css/bigmacintosh.css
+++ b/source-css/bigmacintosh.css
@@ -18,6 +18,22 @@ a[href|="/maccheer"] {
     height: 80px;
     background-image: url(%%bigyay%%)
     }
+a[href|="/thinkingmac"] { 
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 134px;
+    background-image: url(%%thinkingmac%%)
+    }
+a[href|="/guiltymac"] {     
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 186px;
+    background-image: url(%%guiltymac%%)
+    }
 a[href|="/macsalute"] {     
     display: block;
     clear: none;
