--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -679,6 +679,48 @@ background-position: -224px -400px;
 
 /*stylesheet1 "sheet14" end*/
 
+/*stylesheet14 "sheet14"*/
+
+a[href|="/chibichaser"] {
+float:left;
+width:131px;
+height:175px;
+background-repeat:no-repeat;
+background-image:url(%%sheet14%%);
+background-position: 0px 0px;
+}
+
+a[href|="/clickityclickclick"] {
+float:left;
+width:157px;
+height:175px;
+background-repeat:no-repeat;
+background-image:url(%%sheet14%%);
+background-position: -131px 0px;
+}
+
+a[href|="/ccface"] {
+float:left;
+width:137px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet14%%);
+background-position: -167px -175px;
+}
+
+a[href|="/shantae"] {
+float:left;
+width:200px;
+height:202px;
+background-repeat:no-repeat;
+background-image:url(%%sheet14%%);
+background-position: 0px -420px;
+}
+
+/*stylesheet14 "sheet14" end*/
+
+
+
 /*un-assigned*/
 
 a[href|="/chasercat"] {
@@ -926,6 +968,14 @@ width:144px;
 height:259px;
 background-repeat:no-repeat;
 background-image:url(%%ccconfused%%);
+}
+
+a[href|="/gnar"] {
+float:left;
+width:226px;
+height:225px;
+background-repeat:no-repeat;
+background-image:url(%%Gnar%%);
 }
 
 a[href|="/cclaugh"] {
