--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -1,4 +1,4 @@
-/*Header source: http://amorecadenza.deviantart.com/art/Radiance-470086572 */
+/*Header source: http://kenket.deviantart.com/art/Eyyyyyup-484741516 */
 
 div.titlebox span.word {display:none}
 
@@ -166,7 +166,7 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  text-align:center;
  height:500px;
  width:100%;
- background-image:url(%%newyearsfooter%%);
+ background-image:url(%%footer%%);
  background-repeat:no-repeat;
  margin-bottom:-25px;
  background-position: bottom center;
@@ -1260,6 +1260,12 @@ a.author[href$="Peacefulzealot"]:before {font-size:10px!important; visibility:vi
 a.author[href$="Fuzzy_Gauntlets"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="Fuzzy_Gauntlets"]:before {font-size:10px!important; visibility:visible!important; content: "Fuzzy_Infinity_Gauntlets"}
 
+a.author[href$="ZephyrC"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+a.author[href$="ZephyrC"]:before {font-size:10px!important; visibility:visible!important; content: "ZC"}
+
+a.author[href$="1125a"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+a.author[href$="1125a"]:before {font-size:10px!important; visibility:visible!important; content: "1125au"}
+
 .sidecontentbox a.author[href$="Pinkie_Pie"] {font-size:0!important; overflow:hidden; display:none; content: "";}
 
 
@@ -1326,7 +1332,7 @@ z-index:9000}
 .thing[data-fullname$="g"] > .midcol > .upmod:focus::after { content: "Whoa ho there, loverboy!"; }
 .thing[data-fullname$="h"] > .midcol > .upmod:focus::after { content: "Okie Dokie Lokie!"; }
 .thing[data-fullname$="i"] > .midcol > .upmod:focus::after { content: "It was under E-ee!"; }
-.thing[data-fullname$="j"] > .midcol > .upmod:focus::after { content: "And thats how Equestria was made"; }
+.thing[data-fullname$="j"] > .midcol > .upmod:focus::after { content: "And that's how Equestria was made"; }
 .thing[data-fullname$="k"] > .midcol > .upmod:focus::after { content: "Does this really deserve an upvote?"; }
 .thing[data-fullname$="l"] > .midcol > .upmod:focus::after { content: "All the ponies in this town are CRAZY"; }
 .thing[data-fullname$="m"] > .midcol > .upmod:focus::after { content: "Prepare your butts!"; }
