--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -551,15 +551,6 @@ a[href|="/americanlunasalute"] {
     background-image: url(%%americanlunasalute%%) !important
     }
 
-a[href|="/turnip"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 89px;
-    height: 150px;
-    background-image: url(%%turnip%%) !important
-    }
-
 a[href|="/ograrity"] {
     display: block;
     clear: none;
@@ -725,6 +716,15 @@ a[href|="/rdsmug"] {
     width: 200px;
     height: 196px;
     background-image: url(%%rdsmug%%) !important
+    }
+
+a[href|="/fluffleshuffle"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 131px;
+    background-image: url(%%flufflespin%%) !important
     }
 
 a[href|="/rosewhat"] {
