--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -470,7 +470,7 @@ a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletaria
 {background-image:url(%%150x150c%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150d 'motes */
-a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly"], a[href|="/ninetales"], a[href|="/venasaur"], a[href|="/applebloom"], a[href|="/sweetiebloom"], a[href|="/celestiaiswatching"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/flufflepirate"], a[href|="/shittypone"], a[href|="/twipie"], a[href|="/zecoradust"], a[href|="/cadgiggle"], a[href|="/incognitotwi"], a[href|="/sovietsparkle"], a[href|="/batcadance"], a[href|="/batvinyl"], a[href|="/christmaslyra"], a[href|="/adultbelle"]
+a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly"], a[href|="/ninetales"], a[href|="/venasaur"], a[href|="/applebloom"], a[href|="/sweetiebloom"], a[href|="/celestiaiswatching"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/flufflepirate"], a[href|="/shittypone"], a[href|="/twipie"], a[href|="/zecoradust"], a[href|="/cadgiggle"], a[href|="/incognitotwi"], a[href|="/sovietsparkle"], a[href|="/batcadance"], a[href|="/batvinyl"], a[href|="/christmaslyra"], a[href|="/adultbelle"], a[href|="/scootapprove"]
 {background-image:url(%%150x150d%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -535,7 +535,7 @@ a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|
 {background-image:url(%%misfitsk%%);display:block;float:left;}
 
 /* Misfits l */
-a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"]
+a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"]
 {background-image:url(%%misfitsl%%);display:block;float:left;}
 
 /*
@@ -627,7 +627,7 @@ a[href|="/deviousmac"], a[href|="/nerdsunset"], a[href|="/rdfacehoof"], a[href|=
 {background-position: -200% -600%;}
 
 /* Grid pos 0,7 'motes */
-a[href|="/zerofucks"], a[href|="/greaserspike"], a[href|="/rdtwipride"], a[href|="/rarityunamused"], a[href|="/wartortle"]
+a[href|="/zerofucks"], a[href|="/greaserspike"], a[href|="/rdtwipride"], a[href|="/rarityunamused"], a[href|="/wartortle"], a[href|="/scootapprove"]
 {background-position: 0 -700%;}
 
 /* Grid pos 1,7 'motes */
@@ -1221,3 +1221,4 @@ a[href|="/sblick"] {width:60px;height:86px;background-position: -205px 0;}
 a[href|="/sombraheart"] {width:119px;height:202px;background-position: 0 -250px;}
 a[href|="/teamtaco"] {width:200px;height:146px;background-position: -128px -117px;}
 a[href|="/ablick"] {width:75px;height:105px;background-position: -265px 0;}
+a[href|="/cmcship"] {width:200px;height:129px;background-position: -119px -263px;}
