--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -2200,3 +2200,68 @@ a[href|="/octapinkiehug"] {
  background-position: -0px -1350px;  
 } 
  
+a[href|="/discordchill"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 195px;
+ height: 150px;
+ background-image: url(%%discordsheet%%);
+ background-position: -0px -0px;  
+} 
+ 
+ 
+a[href|="/discordjazzhands"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 135px;
+ height: 150px;
+ background-image: url(%%discordsheet%%);
+ background-position: -0px -150px;  
+} 
+ 
+ 
+a[href|="/discordpoint"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 188px;
+ height: 150px;
+ background-image: url(%%discordsheet%%);
+ background-position: -0px -300px;  
+} 
+ 
+ 
+a[href|="/discordpriceless"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 139px;
+ height: 150px;
+ background-image: url(%%discordsheet%%);
+ background-position: -0px -450px;  
+} 
+ 
+ 
+a[href|="/chaosdoubled"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 307px;
+ height: 350px;
+ background-image: url(%%discordsheet%%);
+ background-position: -0px -1000px;  
+} 
+ 
+ 
+a[href|="/discordwave"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 138px;
+ height: 200px;
+ background-image: url(%%discordsheet%%);
+ background-position: -0px -800px;  
+} 
+ 
