--- a/source-css/ponymotesextra2.css
+++ b/source-css/ponymotesextra2.css
@@ -56,3 +56,4 @@ font-size: large;
 /* Animated Emotes */
 a[href|="/cannotcontainrage"] {background:url(%%cannotcontainrage%%) no-repeat;width:150px;height:150px;display:block;float:left;}
 a[href|="/lyraquestion"] {background:url(%%lyraquestion%%) no-repeat;width:300px;height:300px;display:block;float:left;}
+a[href|="/bigmaceatsbigmac"] {background:url(%%bigmaceatsbigmac%%) no-repeat;width:120px;height:104px;display:block;float:left;}
