Stylesheet/emote/tag updates 2015-01-25

--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -28,6 +28,7 @@ bow stroke:        #d32e1b
 #header-bottom-right{ background-color: #daf6b7; }
 a { color: #7ac142; }
 a:visited { color: #41a22e; }
+.message-count { color: white !important; }
 #url-field .title-status { color: #ff6e5d; }
 a#search_showmore { color: #fff; }
 .srdrop a.choice:hover { background-color: #daf6b7; }
@@ -546,3 +547,4 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 .flair-adagiodazzle { background-position: 0 -2200%; }
 .flair-ariablaze { background-position: -100% -2200%; }
 .flair-sonatadusk { background-position: -200% -2200%; }
+.flair-strudel { background-position: 0 -2300%; width: 32px; }
