--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -361,7 +361,7 @@ background:url(%%BerryMail%%);
 
 .author[href$="/Battlesmit"]:before {content: 'Captain ' ;}
 
-.author[href$="/KillerRabbit1253"]:before {content: 'King Queen ' ;}
+.author[href$="/KillerRabbit1253"]:before {content: 'King Queen Stallion ' ;}
 .author[href$="/KillerRabbit1253"]:after {content: ' is the princess of ice cream, BerryTrain, and Boxy ' ;}
 .author[href$="/CrystalLord"]:after {content: ' of lording crystals' ;}
 .author[href$="HonorInDefeat"]:after {content: ' of Disney Songs' ;}
