--- a/source-css/colgateinquisition.css
+++ b/source-css/colgateinquisition.css
@@ -427,6 +427,171 @@ height: 150px;
 background-image: url(%%colgatespreadsheet2%%)
 }
 
+/* colgateoffended */
+a[href^="/colgateoffended"] {
+background-position: 0px -150px;
+display: block;
+clear: none;
+float: left;
+width: 117px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+/* colgateooooh */
+a[href^="/colgateooooh"] {
+background-position: -150px -150px;
+display: block;
+clear: none;
+float: left;
+width: 140px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+/* colgatejustno */
+a[href^="/colgatejustno"] {
+background-position: -300px -150px;
+display: block;
+clear: none;
+float: left;
+width: 135px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+/* colgateisderp */
+a[href^="/colgateisderp"] {
+background-position: -450px -150px;
+display: block;
+clear: none;
+float: left;
+width: 110px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+/* colgategiddy */
+a[href^="/colgategiddy"] {
+background-position: -600px -150px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+/* colgateout */
+a[href^="/colgateout"] {
+background-position: -750px -150px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+/* colgatethis */
+a[href^="/colgatethis"] {
+background-position: -900px -150px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+/* colgatecriticize */
+a[href^="/colgatecriticize"] {
+background-position: -1050px -150px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+/* colgatescrub */
+a[href^="/colgatescrub"] {
+background-position: -1200px -150px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet2%%)
+}
+
+/* dashie wat */
+a[href^="/dashiewat"] {
+background-position: 0px 0px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet3%%)
+}
+
+/* colgate ask */
+a[href^="/colgateask"] {
+background-position: -150px 0px;
+display: block;
+clear: none;
+float: left;
+width: 225px;
+height: 150px;
+background-image: url(%%colgatespreadsheet3%%)
+}
+
+/* colgate dontwant */
+a[href^="/colgatedontwant"] {
+background-position: -375px 0px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet3%%)
+}
+
+/* colgate pondering */
+a[href^="/colgatepondering"] {
+background-position: -525px 0px;
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%colgatespreadsheet3%%)
+}
+
+/* colgate rd cuddle */
+a[href^="/colgaterainbowdashcuddle"] {
+background-position: -675px 0px;
+display: block;
+clear: none;
+float: left;
+width: 160px;
+height: 150px;
+background-image: url(%%colgatespreadsheet3%%)
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* SCOOTALOO SPREAD SHEET */
 
