--- a/source-css/mlpoc.css
+++ b/source-css/mlpoc.css
@@ -824,8 +824,8 @@ padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
 background-color:white;}
 
 .flair-moonlit
-{ color:green; 
-border: 2px solid white; border-radius: 20px; 
+{ color:white; 
+border: 2px solid green; border-radius: 20px; 
 padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
 background-color:grey;}
 
@@ -834,6 +834,13 @@ background-color:grey;}
 border: 2px solid #B9971B; border-radius: 20px; 
 padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
 background-color:#B98A6E;}
+
+.flair-pancakeskunk
+{ color:white; 
+border: 2px solid black; border-radius: 20px; 
+padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
+background-color:grey;}
+
 /* EMOTE SPRITESHEETS (BY CHARACTER) */
 
 /* GAME CHANGER */
