--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -442,7 +442,7 @@ a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[hr
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70b 'motes */
-a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"]
+a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"]
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -454,7 +454,7 @@ a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100c 'motes */
-a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"]
+a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"]
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -470,8 +470,12 @@ a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletaria
 {background-image:url(%%150x150c%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150d 'motes */
-a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly"], a[href|="/ninetales"], a[href|="/venasaur"], a[href|="/applebloom"], a[href|="/sweetiebloom"], a[href|="/celestiaiswatching"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/flufflepirate"], a[href|="/shittypone"], a[href|="/twipie"], a[href|="/zecoradust"], a[href|="/cadgiggle"], a[href|="/incognitotwi"], a[href|="/sovietsparkle"], a[href|="/batcadance"], a[href|="/batvinyl"], a[href|="/christmaslyra"], a[href|="/adultbelle"], a[href|="/scootapprove"]
+a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly"], a[href|="/ninetales"], a[href|="/venasaur"], a[href|="/applebloom"], a[href|="/sweetiebloom"], a[href|="/celestiaiswatching"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/flufflepirate"], a[href|="/shittypone"], a[href|="/twipie"], a[href|="/zecoradust"], a[href|="/cadgiggle"], a[href|="/incognitotwi"], a[href|="/sovietsparkle"], a[href|="/batcadance"], a[href|="/batvinyl"], a[href|="/christmaslyra"], a[href|="/adultbelle"], a[href|="/scootapprove"], a[href|="/boopening"]
 {background-image:url(%%150x150d%%);width:150px;height:150px;display:block;float:left;}
+
+/* 150x150d 'motes */
+a[href|="/boopening"]
+{background-image:url(%%150x150e%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
 a[href|="/regret"], a[href|="/pinkiemail"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/nightmaresparkle"], a[href|="/magnemites"], a[href|="/princessfluttershy"], a[href|="/pinkpyro"], a[href|="/happynewyear"], a[href|="/hnng"], a[href|="/woonabounce"], a[href|="/lunanurse"], a[href|="/50sderpy"]
@@ -535,7 +539,7 @@ a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|
 {background-image:url(%%misfitsk%%);display:block;float:left;}
 
 /* Misfits l */
-a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"]
+a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"], a[href|="/swappleaww"]
 {background-image:url(%%misfitsl%%);display:block;float:left;}
 
 /*
@@ -543,7 +547,7 @@ a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/
  */
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
-a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apathiasquint"], a[href|="/tuxpony"], a[href|="/karmashark"], a[href|="/jumptheshark"], a[href|="/flutterbatscowl"], a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/imnotsayingitwaschaos"], a[href|="/rariluna"], a[href|="/poliwag"], a[href|="/sadbot"], a[href|="/twithatsnice"]
+a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apathiasquint"], a[href|="/tuxpony"], a[href|="/karmashark"], a[href|="/jumptheshark"], a[href|="/flutterbatscowl"], a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/imnotsayingitwaschaos"], a[href|="/rariluna"], a[href|="/poliwag"], a[href|="/sadbot"], a[href|="/twithatsnice"], a[href|="/boopening"]
 {background-position: 0 0;}
 
 /* Grid pos 1,0 'motes */
@@ -571,7 +575,7 @@ a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pink
 {background-position: 0 -200%;}
 
 /* Grid pos 1,2 'motes */
-a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutraljack"], a[href|="/scootexcited"], a[href|="/happynewyear"], a[href|="/justforyou"], a[href|="/pinkieoooh"], a[href|="/pptsundere"], a[href|="/notenoughtwi"], a[href|="/applebloom"], a[href|="/karmagrin"]
+a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutraljack"], a[href|="/scootexcited"], a[href|="/happynewyear"], a[href|="/justforyou"], a[href|="/pinkieoooh"], a[href|="/pptsundere"], a[href|="/notenoughtwi"], a[href|="/applebloom"], a[href|="/karmagrin"], a[href|="/deeplyintriguedcadance"]
 {background-position: -100% -200%;}
 
 /* Grid pos 2,2 'motes */
@@ -611,7 +615,7 @@ a[href|="/tiadisapproval"], a[href|="/ppdoubt"], a[href|="/nerdpie"], a[href|="/
 {background-position: -100% -500%;}
 
 /* Grid pos 2,5 'motes */
-a[href|="/raridoubt"], a[href|="/nerdtwi"], a[href|="/dashsquint"], a[href|="/seapeeve"], a[href|="/scootabloom"], a[href|="/batcadance"]
+a[href|="/raridoubt"], a[href|="/nerdtwi"], a[href|="/dashsquint"], a[href|="/seapeeve"], a[href|="/scootabloom"], a[href|="/batcadance"], a[href|="/sbeestare"]
 {background-position: -200% -500%;}
 
 /* Grid pos 0,6 'motes */
@@ -1222,3 +1226,4 @@ a[href|="/sombraheart"] {width:119px;height:202px;background-position: 0 -250px;
 a[href|="/teamtaco"] {width:200px;height:146px;background-position: -128px -117px;}
 a[href|="/ablick"] {width:75px;height:105px;background-position: -265px 0;}
 a[href|="/cmcship"] {width:200px;height:129px;background-position: -119px -263px;}
+a[href|="/swappleaww"] {width:150px;height:99px;background-position: -340px 0;}
